--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -173,7 +173,7 @@ input:checked + label .svg.sun{
     position: relative;
 
 }
-.slide_one, .slide_two, .slide_three, .slide_four{
+.slide_one, .slide_two, .slide_three, .slide_four, .slide_five, .slide_six{
     width:100%;
     height:100%;
     position: absolute;
